--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -71,7 +71,7 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti" />
+  <meta name="author" content="Yijie Li (李毅杰)" />
 
   
   
@@ -806,7 +806,7 @@
         
 
   <span class="author-highlighted">
-      Nelson Bighetti</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Yijie Li (李毅杰)</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
