--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -19,7 +19,7 @@
 
   <link rel="canonical" href="https://yijie-li2022.github.io/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Yijie Li</title>
 
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/theme/black.min.css">
