--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1009,7 +1009,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://yijie-li2022.github.io/">Yijie Li (李毅杰)</a></h5>
       <h6 class="card-subtitle">Undergraduate student major in Software Engineering</h6>
-      <p class="card-text">My research interests include distributed robotics, mobile computing and programmable matter.</p>
+      <p class="card-text">My research interests include computer vision, artificial intelligence and image processing.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
