--- a/project/paddlepaddle-ddpm/index.html
+++ b/project/paddlepaddle-ddpm/index.html
@@ -1065,7 +1065,7 @@
       
     
     <li>
-      <a href="https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ" target="_blank" rel="noopener">
+      <a href="https://scholar.google.com/citations?user=SqIl3BMAAAAJ" target="_blank" rel="noopener">
         <i class="ai ai-google-scholar-square"></i>
       </a>
     </li>
