--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -808,6 +808,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/WangHewei16/Attentional-Multi-Directional-Convolution-Network" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
