--- a/index.html
+++ b/index.html
@@ -2360,6 +2360,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/WangHewei16/Attentional-Multi-Directional-Convolution-Network" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
@@ -2573,6 +2581,14 @@
   Cite
 </a>
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/WangHewei16/Attentional-Multi-Directional-Convolution-Network" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
