--- a/publication/amdcnet-2022/index.html
+++ b/publication/amdcnet-2022/index.html
@@ -862,6 +862,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/WangHewei16/Attentional-Multi-Directional-Convolution-Network" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
