--- a/index.html
+++ b/index.html
@@ -2379,6 +2379,10 @@
 
 
 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://doi.org/10.1016/j.displa.2022.102243" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
   </div>
@@ -2600,6 +2604,10 @@
 
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://doi.org/10.1016/j.displa.2022.102243" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
