--- a/publication/amdcnet-2022/index.html
+++ b/publication/amdcnet-2022/index.html
@@ -881,6 +881,10 @@
 
 
 
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://doi.org/10.1016/j.displa.2022.102243" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
