--- a/publication/index.html
+++ b/publication/index.html
@@ -845,6 +845,10 @@
 
 
 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://doi.org/10.1016/j.displa.2022.102243" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
