--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 
     <div class="article-style">
       <p>I am a undergraduate student in Beijing-Dublin Internation College (BDIC), BJUT, while I am major in software engineering. In the past three year, I have completed two paper as the first author and three papers as second author, two of which have been published recently. I am also developing a simple education-aimed deep learning system, TinyDL and a python-cuda extension for speeding up tensor operations.</p>
-<p>My research interest lies in developing and building computer vision models and algorithms for human face image synthsis, image attribute manipulation, image segmentation, salient object detection, and neural rendering.</p>
+<p>My research interest lies in developing and building computer vision models and algorithms for human face image synthesis, image attribute manipulation, image segmentation, salient object detection, and neural rendering.</p>
 
     </div>
 
@@ -2266,7 +2266,7 @@
   <span >
       Hewei Wang</span>, <span class="author-highlighted">
       Yijie Li (李毅杰)</span>, <span >
-      Xishi Jia</span>, <span >
+      Shijia Xi</span>, <span >
       Shaofan Wang</span>, <span >
       Muhammad Salman Pathan</span>, <span >
       Soumyabrata Dev</span>
@@ -2550,7 +2550,7 @@
   <span >
       Hewei Wang</span>, <span class="author-highlighted">
       Yijie Li (李毅杰)</span>, <span >
-      Xishi Jia</span>, <span >
+      Shijia Xi</span>, <span >
       Shaofan Wang</span>, <span >
       Muhammad Salman Pathan</span>, <span >
       Soumyabrata Dev</span>
