--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -771,7 +771,7 @@
   <span >
       Hewei Wang</span>, <span class="author-highlighted">
       Yijie Li (李毅杰)</span>, <span >
-      Xishi Jia</span>, <span >
+      Shijia Xi</span>, <span >
       Shaofan Wang</span>, <span >
       Muhammad Salman Pathan</span>, <span >
       Soumyabrata Dev</span>
