--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 
     <div class="article-style">
       <p>I am a undergraduate student in Beijing-Dublin Internation College (BDIC), BJUT, while I am major in software engineering. In the past three year, I have completed two paper as the first author and three papers as second author, two of which have been published recently. I am also developing a simple education-aimed deep learning system, TinyDL and a python-cuda extension for speeding up tensor operations.</p>
-<p>My research interest lies in developing and building computer vision models and algorithms for human face image synthesis, image attribute manipulation, image segmentation, salient object detection, and neural rendering.</p>
+<p>My research interest lies in developing and building computer vision models and algorithms for human face image synthesis, image attribute manipulation, image segmentation, salient object detection, and other related areas.</p>
 
     </div>
 
@@ -1249,7 +1249,7 @@
             <div>
           
 
-              <div class="section-subheading card-title exp-title text-muted my-0">Research Intern</div>
+              <div class="section-subheading card-title exp-title text-muted my-0">Research Assistant</div>
               <div class="section-subheading card-title exp-company text-muted my-0">Tsinghua University</div>
               <div class="text-muted exp-meta">
                 Jan 2022 –
@@ -1265,7 +1265,7 @@
           </div>
           
 
-          <div class="card-text">Engaged in research of image synthsis models and image style manipulation</div>
+          <div class="card-text">Engaged in research of image synthesis models and image style manipulation</div>
         </div>
       </div>
     </div>
