--- a/publication/amdcnet-2022/index.html
+++ b/publication/amdcnet-2022/index.html
@@ -1075,7 +1075,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://yijie-li2022.github.io/">Yijie Li (李毅杰)</a></h5>
-      <h6 class="card-subtitle">Undergraduate student major in Software Engineering</h6>
+      <h6 class="card-subtitle">An Undergraduate Majoring in Software Engineering</h6>
       <p class="card-text">My research interests include computer vision, artificial intelligence and image processing.</p>
       <ul class="network-icon" aria-hidden="true">
   
