--- a/project/des-pyqt/index.html
+++ b/project/des-pyqt/index.html
@@ -868,6 +868,8 @@
     <div class="article-style">
       <h2 id="introduction">Introduction</h2>
 <p>This is a python implementation of DES encryption algorithms with PyQT GUI.</p>
+<h2 id="usage">Usage</h2>
+<p>Download win64 executable file from <a href="https://github.com/Att100/DES-Encryption-PyQT/releases" target="_blank" rel="noopener">link</a> and follow the instruction in <a href="https://github.com/Att100/DES-Encryption-PyQT/blob/main/doc/images.pptx" target="_blank" rel="noopener">link</a></p>
 
     </div>
 
