--- a/publication/amdcnet-2022/index.html
+++ b/publication/amdcnet-2022/index.html
@@ -934,7 +934,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <em>Displays</em></div>
+          <div class="col-12 col-md-9"><em>Displays</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -1277,7 +1277,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 Yijie Li. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2023 Yijie Li. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
